--- a/templates/customer/customerbase.html
+++ b/templates/customer/customerbase.html
@@ -4,8 +4,6 @@
 
 <head>
   <meta charset="utf-8">
- 
-
   <style media="screen">
     a:link {
       text-decoration: none;
@@ -14,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: "Gill Sans", sans-serif;;
+      font-family: "Gill Sans", sans-serif;
     }
 
     header {
@@ -49,7 +47,6 @@
       font-weight: 600;
       color: #fff;
       transition: 0.5s;
-
     }
 
     .logout_btn:hover {
@@ -78,7 +75,6 @@
     .sidebar h4 {
       color: #ccc;
       margin-top: 0;
-      
     }
 
     .sidebar a {
@@ -90,7 +86,6 @@
       padding-left: 40px;
       box-sizing: border-box;
       transition: 0.5s;
-
     }
 
     .sidebar a:hover {
@@ -149,10 +144,7 @@
     }
   </style>
 
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-
-
 </head>
 
 <body>
@@ -171,36 +163,31 @@
     </div>
   </header>
   <!--header area end-->
+
   <!--sidebar start-->
   <div class="sidebar" style="margin-top:60px;">
     <center>
-
       <img src="{% static customer.profile_pic.url %}" class="profile_image" alt="">
       <h4>{{request.user.first_name}}</h4>
       <h6 style="color: rgb(255, 255, 255);">( Customer )</h6>
-
     </center>
 
     <a href="/customer/customer-dashboard"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a>
     <a href="/customer/apply-policy"><i class="fab fa-product-hunt"></i><span>Apply Policy</span></a>
     <a href="/customer/history"><i class="fas fa-history"></i><span>History</span></a>
-
     <a href="/customer/ask-question"><i class="fas fa-question-circle"></i><span>Ask Question</span></a>
     <a href="/customer/question-history"><i class="fas fa-sync-alt"></i><span>Question History</span></a>
+    <a href="/customer/premium-distribution"><i class="fas fa-coins"></i><span>Premium Distribution</span></a>
+
   </div>
   <!--sidebar end-->
-
 
   <!--content start-->
   <div class="content">
     <br><br><br><br><br>
     {% block content %}
-
     {% endblock content %}
-
-
     <br><br><br>
-  
   </div>
   <!--content end-->
 </body>
