--- a/templates/insurance/admin_view_policy_holder.html
+++ b/templates/insurance/admin_view_policy_holder.html
@@ -41,7 +41,7 @@
       {% for t in policyrecords %}
       <tr>
         <td> {{ forloop.counter }}</td>
-        <td> {{t.Policy}}</td>
+        <td> {{t.policy.policy_name}}</td>
         <td> {{t.customer}}</td>
         
         <td>{{t.creation_date}}</td>
